django course 24 commit

--- a/docs/2025-03-26.md
+++ b/docs/2025-03-26.md
@@ -1,6 +1,8 @@
 ## INDEX
 1. BootStrap
 2. css 바꿨는데도 변화가 없다면?
+3. {{ .. }} 랑 {% .. %} 차이
+4. 하나의 html로 MyPage, 다른 유저 페이지 모두 보여줄 수 있도록 만들기
 ---
 ## MAIN LOG
 ### 1. BootStrap
@@ -8,3 +10,12 @@
 
 ### 2. css 바꿨는데도 변화가 없다면?
 + 강력 새로고침  ctrl + shift + R
+
+### 3. {{ .. }} 랑 {% .. %} 차이
++ 전자는 단순 내용을 출력, 후자는 조건문이나 반복문 처럼 어떤 작업을 해야하는 경우.
+
+### 4. 하나의 html로 MyPage, 다른 유저 페이지 모두 보여줄 수 있도록 만들기
+```python
+context_object_name = 'target_uset'  # In 'accountapp/views.py' line 45
+```
+ + 그리고 'detail.html'에 target_user를 받도록 해줌.
