django course 25 commit

--- a/docs/2025-03-26.md
+++ b/docs/2025-03-26.md
@@ -1,14 +1,17 @@
 ## INDEX
 1. BootStrap
-2. css 바꿨는데도 변화가 없다면?
+2. css 바꿨는데도 웹사이트에서 변화가 없다면?
 3. {{ .. }} 랑 {% .. %} 차이
 4. 하나의 html로 MyPage, 다른 유저 페이지 모두 보여줄 수 있도록 만들기
+5. __init__은 클래스 생성자.(C++ 배울 때 배운거 생각)
+6. *args와 **kwargs 뜻
+7. 상속받는 클래스의 생성자에서 부모 클래스의 생성자로 전달하는 이유.
 ---
 ## MAIN LOG
 ### 1. BootStrap
 + BootStrap을 써봄. 로그인 창 못생겼는데, 깔끔하게 바뀜. 이런식으로 미리 만들어진거 가져와서 쓸 수 있음.
 
-### 2. css 바꿨는데도 변화가 없다면?
+### 2. css 바꿨는데도 웹사이트에서 변화가 없다면?
 + 강력 새로고침  ctrl + shift + R
 
 ### 3. {{ .. }} 랑 {% .. %} 차이
@@ -19,3 +22,57 @@
 context_object_name = 'target_uset'  # In 'accountapp/views.py' line 45
 ```
  + 그리고 'detail.html'에 target_user를 받도록 해줌.
+
+
+## (5~7)
+```python
+# accountapp/forms.py
+from django.contrib.auth.forms import UserCreationForm
+
+class AccountUpdateForm(UserCreationForm):
+    def __init__(self, *args, **kwargs):
+        super().__init__(*args, **kwargs)
+```
+---
+### 5. __init__은 클래스 생성자.(C++ 배울 때 배운거 생각)
++ 생성자는 클래스 생성 시(폼도 클래스임), 들어오는 정보들을(유저 정보같은거) 클래스에 전달해주는 역할을 함.
+
+### 6. *args와 **kwargs 뜻
++ 생성자는 정보를 전달한다면서 정작 전달하는 건 이런거냐?
++ 뭐 들어올 지 모르니까 이걸 쓰는거임.
+  + 함수/클래스에서 매번 인자 개수 정하기 귀찮고
+  + 확장 가능하게 만들기 위해
+
+
+
+|문법| 뜻                                                            |
+|---|--------------------------------------------------------------|
+|*args| 함수에 몇개 들어올 지 모를 때, "개수 제한 없는 위치 인자"를 받아요 → (내부적으로) 리스트/튜플 형태 |
+|**kwargs| "개수 제한 없는 키워드 인자"를 받아요 → 딕셔너리 형태                             |
+
+- *args 예시
+```python
+def say_hello(*args):
+    for name in args:  # args는 리스트 혹은 튜플 형태이므로 for로 뽑아씀.
+        print(f"Hello, {name}!")
+
+say_hello('Alice', 'Bob', 'Charlie')  # 몇개 들어올 지 모름 
+```
+
+- **kwargs 예시
+```python
+def show_info(**kwargs):
+    for key, value in kwargs.items():  # 딕셔너리의 아이템을 뽑아 사용하는 것
+        print(f"{key}: {value}")  # 키밸류 뽑아서 사용 가능
+
+show_info(name="Alice", age=25, job="Dev")  # 이렇게 딕셔너리 형태로 들어옴
+
+```
+
+### 7. 상속받는 클래스의 생성자에서 부모 클래스의 생성자로 전달하는 이유.
++ 아무튼 상속받는 클래스에 인자들(*args, **kwargs)을 전달하면, 그걸 그대로 부모 클래스의 생성자에게도 전달해주는 것임.
+```python
+def __init__(self, *args, **kwargs):
+        super().__init__(*args, **kwargs)
+```
++ 상속이라는 게 부모 기능 끌어다 쓰는건데, 부모가 다른 인자를 받으면 값이 제대로 나오겠음?
