django course 26 commit

--- a/docs/2025-03-26.md
+++ b/docs/2025-03-26.md
@@ -1,5 +1,5 @@
-## INDEX
-1. BootStrap
+# [ INDEX ]
+1. Boot Strap
 2. css 바꿨는데도 웹사이트에서 변화가 없다면?
 3. {{ .. }} 랑 {% .. %} 차이
 4. 하나의 html로 MyPage, 다른 유저 페이지 모두 보여줄 수 있도록 만들기
@@ -7,7 +7,7 @@
 6. *args와 **kwargs 뜻
 7. 상속받는 클래스의 생성자에서 부모 클래스의 생성자로 전달하는 이유.
 ---
-## MAIN LOG
+# [ MAIN LOG ]
 ### 1. BootStrap
 + BootStrap을 써봄. 로그인 창 못생겼는데, 깔끔하게 바뀜. 이런식으로 미리 만들어진거 가져와서 쓸 수 있음.
 
