--- a/docs/2025-03-28.md
+++ b/docs/2025-03-28.md
@@ -1,4 +1,6 @@
 # [ INDEX ]
-1. 
----
+1. git bash 에서 복사 붙여넣기
 # [ MAIN LOG ]
+### 1. git bash 에서 복사 붙여넣기
++ 복사 : ctrl + insert
++ 붙여넣기 : shift + insert
