--- a/docs/2025-04-01.md
+++ b/docs/2025-04-01.md
@@ -1,7 +1,11 @@
 # [COURSE]
 - course 27 : Authentication 인증시스템 구축
+- course 28 : Decorator를 이용한 코드 간소화
 # [ INDEX ]
 1. self.get_object()와 self.request.user
+2. 데코레이터
+3. 데코레이터 : @login_required
+4. @method_decorator(login_required, 'get')
 # [ MAIN LOG ]
 ### 1. self.get_object()와 self.request.user
 ```python
@@ -16,3 +20,69 @@ class AccountUpdateView(UpdateView):
 ```
 + self.get_object는, url에서 받은 pk로 검색한 유저객체
 + self.request.user는 지금 요청을 넣고 있는 유저객체
+
+### 2. 데코레이터
+#출처 : https://smart-worker.tistory.com/48   
+
+Decorator는 기존 함수를 수정하지 않고 그 기능을 확장하는 방법을 제공함.
+```python
+# decorator를 정의하는 함수. 인자로 함수를 받습니다.
+def my_decorator(func):
+    def wrapper():
+        print("함수 실행 전 무언가를 합니다..")
+        func() # 인자로 받은 함수를 실행합니다.
+        print("함수 실행 후 무언가를 합니다.")
+    return wrapper
+
+# @ + decorator 함수명을 앞에 쓰는 사용할 수 있습니다.
+@my_decorator
+def say_hello():
+    print("Hello!")
+    
+say_hello()
+```
+
+- 장점 : 코드의 재사용성을 높여줌(중복 코드 최소화, 가독성 향상)
+- 단점 : 무분별하게 쓰면 복잡도 높이고 버그의 원인이 됨.
+
+### 3. 데코레이터 : @login_required
+```python
+def hello_world(request):
+    if request.user.is_authenticated:
+        # 무언가를 합니다.
+    else:
+        return HttpResponseRedirect(reverse('accountapp:login'))
+```
+```python
+from django.contrib.auth.decorators import login_required
+
+@login_required # <--- 요거
+def hello_world(request):
+```
+이 코드와 같은 역할을 해주는 데코레이터.   
+즉, 로그인 되있으면 정해진 무언가를 하게해주고,   
+로그인 되어있지 않으면 로그인창으로 리다이렉트를 해준다.
+
+### 4. @method_decorator(login_required, 'get')
+function 뷰에는 데코레이터를 바로 달 수 있지만,   
+class 뷰의 내부 메서드(get, post 등등)재정의에는 데코레이터를 바로 달 수 없다.
+```python
+class AccountDeleteView(DeleteView):
+    # ~~~
+    @login_required
+    def get(self, *args, **kwargs):
+        # ~~~
+```
+이런식으로 상속된 get에도 데코레이터를 달 수 없음. 작동안함.   
+사용하려면 아래와 같이 하면 된다.
+
+```python
+has_ownered = [login_required, account_ownership_required]  # <--- 데코레이터 배열
+
+@method_decorator(login_required, 'get')
+@method_decorator(has_ownered, 'post')  # <--- 이런식으로 데코레이터와 적용할 메서드를 감싼다
+class AccountUpdateView(UpdateView):
+    # ~~~
+    # 메서드 재정의 안해도 됨
+```
+데코레이터 여러개 넣어야 한다면, 배열로 만들어서 넣자.
