django course 29 commit

--- a/docs/2025-04-01.md
+++ b/docs/2025-04-01.md
@@ -63,13 +63,13 @@ def hello_world(request):
 즉, 로그인 되있으면 정해진 무언가를 하게해주고,   
 로그인 되어있지 않으면 로그인창으로 리다이렉트를 해준다.
 
-### 4. @method_decorator(login_required, 'get')
+### 4. @method_decorator
 function 뷰에는 데코레이터를 바로 달 수 있지만,   
 class 뷰의 내부 메서드(get, post 등등)재정의에는 데코레이터를 바로 달 수 없다.
 ```python
 class AccountDeleteView(DeleteView):
     # ~~~
-    @login_required
+    @login_required # <--- 이거 해도 적용 안됨.
     def get(self, *args, **kwargs):
         # ~~~
 ```
