django course 30 commit

--- a/docs/2025-04-13.md
+++ b/docs/2025-04-13.md
@@ -1,5 +1,6 @@
 # [COURSE]
 - course 29 : superuser, media 관련 설정
+- course 30 : Profileapp 시작 그리고 ModelForm
 # [ INDEX ]
 1. 
 # [ MAIN LOG ]
@@ -7,3 +8,14 @@
 ```json
 pip install pillow
 ```
+### 2. course 30 필기
+- Account와 Profile은 1대1 매칭
+- Profile에는 Image, Nickname, Message 등이 들어감
+
+### 3. Model Form
+- Account를 만들 때는, 회원가입, 로그인 같이 특별한 기능이라 Form 을 제공해줬음.
+- 그러나 Profile에는 그런 거 없음
+- 그래서 직접 만들어야함. 이때 Model의 각 필드에 대응하여 모든 폼을 만들어주어야 함.
+- 필드가 적으면 상관없지만, 많아질수록 폼 만들기 힘듬.
+- 그래서 Model Form 이라는 게 존재함.
+- 어떤 모델을 사용할건지, 어떤 필드를 입력할건지 적어주면 자동으로 폼 만들어줌.
