--- a/docs/2025-04-13.md
+++ b/docs/2025-04-13.md
@@ -1,14 +1,18 @@
 # [COURSE]
 - course 29 : superuser, media 관련 설정
 - course 30 : Profileapp 시작 그리고 ModelForm
+- course 31 : Profileapp 구현 시작
 # [ INDEX ]
-1. 
+1. media 관련 라이브러리 'pillow'설치했음
+2. course 30
+3. Model Form
+4. context_object_name
 # [ MAIN LOG ]
 ### 1. media 관련 라이브러리 'pillow'설치했음
 ```json
 pip install pillow
 ```
-### 2. course 30 필기
+### 2. course 30
 - Account와 Profile은 1대1 매칭
 - Profile에는 Image, Nickname, Message 등이 들어감
 
